<resources>
    <string name="app_name">SEEMobile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="postulations">Postulations</string>
    <string name="openDrawer">Navigation View Open</string>
    <string name="closeDrawer">Navigation View Closed</string>
    <string name="liste_stages">Liste des stages</string>
    <string name="login_progress_signing_in">Connexion ...</string>
    <string name="prompt_email">Code universel</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="action_sign_in_register">Connexion</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="error_invalid_username">Code sous la forme \'AB12345\'</string>
    <string name="error_incorrect_password">Le mot de passe est invalide</string>

    <string name="employeur_poste">%1$s \n(%2$s entreprise)</string>
    <string name="duree_poste">%1$s mois</string>
    <string name="liste_entrevues">Entrevues</string>

    <string name="liste_favoris">Favoris</string>
    <string name="about">A propos</string>
</resources>
